canary/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-virtual-service
spec:
  hosts:
  - "canary-demo.kcd.local"
  gateways:
  - nginx-gateway
  http:
  - route:
    - destination:
        host: nginx-service-v1
      weight: 50
    - destination:
        host: nginx-service-v2
      weight: 50
